Updates to metadata